--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 body{
 background-color:#48cae4;
+  background-image: url(https://cdn.wallpapersafari.com/75/50/4nQ9TR.jpg);
+        
+     
 }
 h2{
-  color:#ff5c8a;
+  color:#48CAE4;
     font-size:250%;
   letter-spacing:4px;
   text-decoration: underline; 
 }
 p{
-  color:#ff5c8a;
+  color:#CAF0F8;
     font-size:200%;
   }
 img{
-  border:  solid #ff5c8a 15px;
+  border:  solid #CAF0F8 15px;
 height:50%;
   width:40%;
 }
 iframe{
-    border:  #ff5c8a 10px;
+    border:  #CAF0F8 10px;
 }
 ul{
   list-style-type:none;
@@ -30,13 +33,13 @@ li{
 }
 li a{
   padding: 25px;
-  font-family: "Comic-Sans", Fantasy;
+  font-family: "Planet Kosmos", Fantasy;
   border-style: solid;
-  color: #ff5c8a;
+  color: #CAF0F8;
   text-decoration-line:none;
 }
 li a:hover{
   background-color:white;
-  color:blue;
+  color:#0096C7;
   
 }
