--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 background-color:#48cae4;
-  background-image: url(https://cdn.wallpapersafari.com/75/50/4nQ9TR.jpg);
+  background-image: url("https://cdn.wallpapersafari.com/75/50/4nQ9TR.jpg");
         
      
 }
