--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
-body{
-background-color:#48cae4;
-  background-image: url("https://cdn.wallpapersafari.com/75/50/4nQ9TR.jpg");
-        
-     
-}
+body{background-image:url("https://cdn.wallpapersafari.com/75/50/4nQ9TR.jpg");
+        }
 h2{
   color:#48CAE4;
     font-size:250%;
