--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ ul{
 li{
   float: left;
 }
-li a{
+li a:hover{
   padding: 25px;
   font-family: "Planet Kosmos", Fantasy;
   border-style: solid;
