--- a/APPSstyle.css
+++ b/APPSstyle.css
@@ -1,6 +1,5 @@
-body{
- 
-}
+body{background-image:url("https://cdn.wallpapersafari.com/75/50/4nQ9TR.jpg");
+        }
 h1{ font-family:"Planet Kosmos", Fantasy;
 color: #CAF0F8;
   font-size:800%;letter-spacing:10px;
